package war;

public class Drive implements Movements {
    @Override
    public void toMove() {
        System.out.println("driving");
    }
}
