package war;

public interface Movements {
    public void toMove();
}
