package war;

public class Run implements Movements {
    @Override
    public void toMove() {
        System.out.println("running");
    }
}
