package war;

public class SMG implements Attack {
    @Override
    public void toAttack() {
        System.out.println("Fire with SMG");
    }
}
