@startuml

title __WAR's Class Diagram__\n

  namespace war {
    interface war.Attack {
        {abstract} + toAttack()
    }
  }
  

  namespace war {
    class war.Cannon {
        + toAttack()
    }
  }
  

  namespace war {
    class war.Demo {
        {static} + main()
    }
  }
  

  namespace war {
    class war.Drive {
        + toMove()
    }
  }
  

  namespace war {
    class war.Firegun {
        + toAttack()
    }
  }
  

  namespace war {
    class war.Fly {
        + toMove()
    }
  }
  

  namespace war {
    class war.Missile {
        + toAttack()
    }
  }
  

  namespace war {
    interface war.Movements {
        {abstract} + toMove()
    }
  }
  

  namespace war {
    class war.Run {
        + toMove()
    }
  }
  

  namespace war {
    class war.SMG {
        + toAttack()
    }
  }
  

  namespace war {
    class war.Unit {
        + name : String
        + Unit()
        + giveStuff()
        + setMoves()
        + toAttack()
        + toMove()
    }
  }
  

  war.Cannon .up.|> war.Attack
  war.Drive .up.|> war.Movements
  war.Firegun .up.|> war.Attack
  war.Fly .up.|> war.Movements
  war.Missile .up.|> war.Attack
  war.Run .up.|> war.Movements
  war.SMG .up.|> war.Attack
  war.Unit o-- war.Movements : moves
  war.Unit o-- war.Attack : stuff


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
